test/Exercism.Analyzers.CSharp.IntegrationTests/Solutions/Errors/WritesToConsole/ConsoleWriteLine/Errors.cs
using System;

public static class Errors
{
    public static void Test()
    {
        Console.WriteLine("Test");
    }
}